fix(app): fixes for dark mode

--- a/src/app/deploy-commit-dialog/_deploy-commit-dialog.component.theme.scss
+++ b/src/app/deploy-commit-dialog/_deploy-commit-dialog.component.theme.scss
@@ -6,6 +6,12 @@
       background-color: mat.get-theme-color($theme, surface-container-high);
     }
 
+    .environment {
+      &__tag {
+        color: mat.get-theme-color($theme, inverse-on-surface);
+      }
+    }
+
     .dialog-progress {
       background-color: rgba(
         $color: mat.get-theme-color($theme, surface-container-high),
