--- a/src/app/deploy-commit-dialog/deploy-commit-dialog.component.scss
+++ b/src/app/deploy-commit-dialog/deploy-commit-dialog.component.scss
@@ -53,7 +53,6 @@
   &__tag {
     border-radius: 4px;
     font-size: $font-size-l;
-    color: white;
     padding: $space-xs $space-s;
     margin: 0;
     justify-self: stretch;
