--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -8,7 +8,6 @@
 
 .login-box {
   margin: auto;
-  background-color: white;
   padding: $space-m;
   border-radius: $default-border-radius;
   display: flex;
